@@ -174,6 +174,7 @@ typedef enum {
   MBNG_EVENT_META_TYPE_CYCLE_SNAPSHOT,
   MBNG_EVENT_META_TYPE_LOAD_SNAPSHOT,
   MBNG_EVENT_META_TYPE_SAVE_SNAPSHOT,
+  MBNG_EVENT_META_TYPE_SAVE_DELAYED_SNAPSHOT,
   MBNG_EVENT_META_TYPE_DUMP_SNAPSHOT,
 
   MBNG_EVENT_META_TYPE_RETRIEVE_AIN_VALUES,
